--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,10 +1,21 @@
 body {
-  background-color: #fff;
+
+  // background-image: image-url('fire_breathing2.jpeg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #3498db;
   color: #333;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+}
+
+login {
+  margin: 20px;
+  vertical-align: middle;
+  horizontal-align: middle;
+
 }
 
 p, ol, ul, td {
@@ -44,6 +55,28 @@ div {
   &.field, &.actions {
     margin-bottom: 10px;
   }
+  .login_div {
+   position: absolute;
+
+   width: 300px;
+   height: 300px;
+
+   /* Center form on page horizontally & vertically */
+   top: 50%;
+   left: 50%;
+   margin-top: -150px;
+   margin-left: -150px;
+}
+.login_form {
+   width: 300px;
+   height: 300px;
+
+   background: white;
+   border-radius: 10px;
+
+   margin: 20px;
+   padding: 50px;
+ }
 }
 
 #notice {
@@ -82,3 +115,8 @@ div {
 label {
   display: block;
 }
+
+  // {background-image: image-url('fire_breathing2.jpeg');
+  //   background-repeat: no-repeat;
+  //   background-size: 100%;
+  // }
