--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -11,17 +11,16 @@ body {
   line-height: 18px;
 }
 
-login {
-  margin: 20px;
-  vertical-align: middle;
-  horizontal-align: middle;
-
-}
-
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  margin: 30px;
+
+  .center {
+    border: 3px solid green;
+    text-align: center;
+}
 }
 
 pre {
@@ -67,16 +66,20 @@ div {
    margin-top: -150px;
    margin-left: -150px;
 }
-.login_form {
-   width: 300px;
-   height: 300px;
+
+  .login_form {
+   display: flex;
+   // height: 300px;
 
    background: white;
    border-radius: 10px;
-
-   margin: 20px;
-   padding: 50px;
+   vertical-align: middle;
+   horizontal-align: middle;
+   margin: auto;
+   width: 30%;
+   height: 30%;
  }
+
 }
 
 #notice {
