--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 <%=t.label :password%>
 <%= t.text_field :password%>
 <br><br>
-<%= t.submit %>
+<%= t.submit "Login" %>
 <%= link_to "Register", new_user_path %>
   </ul>
 </div>
