made dummy data

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -119,8 +119,6 @@ div {
 }
 
 
-
-
 /*//////////////////////////////////////////////////////////////////
 [ Contact ]*/
 
@@ -152,6 +150,8 @@ div {
 
 .contact100-form {
  width: 100%;
+ text-align: center;
+ color: white;
 }
 
 .contact100-form-title {
