--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,12 @@
 <%=@user.username%>
+
+<%if @user.playlist %>
+
+<%= render 'playlist', playlist: @user.playlist %>
+
+<%else%>
+
+
+<%=render 'prompt'%>
+
+<%end%>
