--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -52,17 +52,48 @@ td {
   padding: 0 5px 7px;
 }
 
+div.gallery {
+  background-image: image-url("logo.png");
+  background-size: 100%;
+    // margin: 10px;
+    display: block;
+   margin-left: auto;
+   margin-right: auto;
+    border: 1px solid #ccc;
+    float: center;
+    width: 200px;
+    height: 100px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    display: block;
+   margin-left: auto;
+   margin-right: auto;
+    width: 100%;
+    height: auto;
+}
+
 div {
+
   &.field, &.actions {
     margin-bottom: 10px;
   }
 
-  img {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    z-index: -1;
-  }
+  // img {
+  //   background-image: image-url("logo.png");
+  //   background-repeat: no-repeat;
+  //   background-size: 100%;
+  //   position: absolute;
+  //   width: 20%;
+  //   height: 20%;
+  //   left: 0px;
+  //   top: 0px;
+  //   z-index: -1;
+  // }
   .login_div {
    position: absolute;
 
