--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,19 +8,56 @@
 
   <% end %>
 
-  <div class="login_div">
-  <%= form_for :user do |t|%>
-  <div class="login_form center" >
-    <ul class="center">
-  <%=t.label :username%>
-  <%= t.text_field :username%>
-  <br>
-  <%=t.label :password%>
-  <%= t.text_field :password%>
-  <br><br>
-  <%= t.submit "Register" %>
+  <!DOCTYPE html>
+  <html>
+  <style>
+  input[type=text], select {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+  }
 
-    </ul>
-  </div>
-  <%end%>
-  </div>
+  input[type=submit] {
+      width: 100%;
+      background-color: #ff5252;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+  }
+
+  input[type=submit]:hover {
+      background-color: #d50000;
+  }
+
+  div {
+      border-radius: 5px;
+      background-color: #f2f2f2;
+      padding: 20px;
+  }
+  </style>
+  <body>
+
+  <div>
+      <%= form_for :user do |t|%>
+      <div class="font_xxlarge">Create an Account</div>
+        <!-- <ul class="center"> -->
+          <%=t.label :username%>
+          <%= t.text_field :username, placeholder:"Your username..."%>
+          <br>
+          <%=t.label :password%>
+          <%= t.text_field :password, placeholder:"Your password..."%>
+          <br><br>
+          <%= t.submit "Register" %><br><br>
+          <a target="_blank" href="http://localhost:3000/" >
+            <div class="gallery"><img></div>
+            <%end%>
+          </div>
+        </body>
+        </html>
