--- a/app/views/users/_prompt.html.erb
+++ b/app/views/users/_prompt.html.erb
@@ -1,1 +1,5 @@
 <h1> PLease selct an option </h1>
+
+<%= link_to "Create A playlist", new_playlist_path  %>
+
+<%= link_to "Join A playlist", join_playlist_path  %>
