--- a/app/views/users/_prompt.html.erb
+++ b/app/views/users/_prompt.html.erb
@@ -1,5 +1,12 @@
-<h1> PLease selct an option </h1>
+<div><br>
+<div class="font_xxlarge"><h2>Please select an option </h1></div>
+<br><br>
+<div class="font_xxlarge">
+<%= link_to "Create A playlist", new_playlist_path %><br>
+<br><br><br>
 
-<%= link_to "Create A playlist", new_playlist_path  %>
-
-<%= link_to "Join A playlist", join_playlist_path  %>
+<%= link_to "Join A playlist", join_playlist_path %></div>
+<br><br>
+<a target="_blank" href="http://localhost:3000/" >
+  <div class="gallery"><img></div>
+</div>
