--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,7 +5,7 @@ body {
   background-image: image-url('pastel.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
-  background-color: black;
+  background-color: white;
   color: #333;
   margin: 40px;
   font-family: verdana, arial, helvetica, sans-serif;
@@ -50,7 +50,7 @@ div.gallery img {
     display: block;
    margin-left: auto;
    margin-right: auto;
-    width: 100%;
+    width: 70%;
     height: auto;
 }
 
