--- a/app/views/users/_prompt.html.erb
+++ b/app/views/users/_prompt.html.erb
@@ -1,12 +1,12 @@
 <div><br>
-<div class="font_xxlarge"><h2>Please select an option </h1></div>
+<div class="font_xxlarge"><h2>Please select an option</h2></div>
 <br><br>
 <div class="font_xxlarge">
 <%= link_to "Create A playlist", new_playlist_path %><br>
 <br><br><br>
 
 <%= link_to "Join A playlist", join_playlist_path %></div>
-<br><br>
-<a target="_blank" href="http://localhost:3000/" >
+<br><br><br>
+<a href="http://localhost:3000/">
   <div class="gallery"><img></div>
 </div>
