--- a/app/assets/stylesheets/playlist.scss
+++ b/app/assets/stylesheets/playlist.scss
@@ -17,7 +17,7 @@ body {
     color: e7e7e7;
     padding: 10px;
     font-family: Arial;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
 }
 .success {background-color: #4CAF50;} /* Green */
@@ -31,6 +31,7 @@ body {
 div.gallery {
   background-image: image-url("logo.png");
   background-size: 100%;
+  background-repeat: no-repeat;
     // margin: 10px;
     display: block;
    margin-left: auto;
@@ -38,7 +39,7 @@ div.gallery {
     border: 1px solid #0D47A1;
     float: center;
     width: 250px;
-    height: 150px;
+    height: 120px;
     border-radius: 3%;
 }
 
@@ -80,4 +81,10 @@ div {
    font-size:xx-large;
    color: #303034;
  }
+
+}
+div.text {
+  font-size: x-large;
+  background-color: #f2f2f2;
+  text-align: center;
 }
