--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,17 +1,19 @@
   <html>
   <style>
+
   input[type=text], select {
-      width: 100%;
+      width: 80%;
       padding: 12px 20px;
       margin: 8px 0;
       display: inline-block;
       border: 1px solid #ccc;
       border-radius: 4px;
       box-sizing: border-box;
+
   }
 
   input[type=submit] {
-      width: 100%;
+      width: 80%;
       background-color: #ff5252;
       color: white;
       padding: 14px 20px;
@@ -19,6 +21,8 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
+
+
   }
 
   input[type=submit]:hover {
@@ -28,45 +32,28 @@
   div {
       border-radius: 5px;
       background-color: #f2f2f2;
-      padding: 20px;
+      padding: 10px;
       text-align: left;
   }
   </style>
   <body>
-    <div class="text">
-    <h1>Create a Playlist</h1>
-  </div>
-    <div class="font_medium">
+
+
+    <div class="wrapper">
+      <h2>Create a Playlist</h2>
     <%= form_for @playlist do |t|%>
 
-    <%=t.label :name%>
-    <%= t.text_field :name, placeholder: "Playlist name here..."%>
-    <br>
-    <%=t.label :passphrase%>
-    <%= t.text_field :passphrase, placeholder: "Passphrase here..."%>
-    <br><br>
-    <%= t.submit "Create Playlist " %>
-    <%end%>
-    <a target="_blank" href="http://localhost:3000/">
-      <div class="gallery"><img></div>
+      <%=t.label :name%>
+      <%= t.text_field :name, placeholder: "Playlist name here..."%>
+      <br>
+      <%=t.label :passphrase%>
+      <%= t.text_field :passphrase, placeholder: "Passphrase here..."%>
+      <br><br>
+      <%= t.submit "Create Playlist " %>
+      <%end%><br><br>
   </div>
-</div>
+  <a target="_blank" href="http://localhost:3000/">
+    <div class="gallery"> </div>
+
   </body>
   </html>
-
-  <!-- <div>
-    <%= form_for :user, url:  check_creds_path , method: :post do |t|%>
-
-    <div class="font_xxlarge">Welcome to Spotifly</div><br>
-    <%=t.label :username%>
-    <%= t.text_field :username, placeholder:"Your username..."%>
-    <br>
-    <%=t.label :password%>
-    <%= t.text_field :password, placeholder:"Your password..."%>
-    <br><br>
-    <%= t.submit "Login" %>
-    <div class="font_medium">Don't have an account? <%= link_to "Click to Register", new_user_path %></div>
-      <%end%>
-    </div>
-  </body>
-  </html> -->
