--- a/app/assets/stylesheets/playlist.scss
+++ b/app/assets/stylesheets/playlist.scss
@@ -4,7 +4,7 @@
 body {
   background-image: image-url('pastel.jpg');
   background-repeat: no-repeat;
-  background-size: 98%;
+  background-size: 100%;
   background-color: white;
   color: #333;
   margin: 40px;
@@ -29,31 +29,24 @@ body {
 
 
 div.gallery {
+
   background-image: image-url("logo.png");
   background-size: 100%;
   background-repeat: no-repeat;
-    // margin: 10px;
-    display: block;
-   margin-left: auto;
-   margin-right: auto;
-    border: 1px solid #0D47A1;
-    float: center;
-    width: 250px;
-    height: 120px;
-    border-radius: 3%;
+
+    // display: block;
+   margin: auto 20px;
+   width: 150px;
+   height: 100px;
+   border-radius: 2%;
+
 }
 
 div.gallery:hover {
     border: 1px solid #777;
 }
 
-div.gallery img {
-    display: block;
-   margin-left: auto;
-   margin-right: auto;
-    width: 70%;
-    height: auto;
-}
+
 
 // <a target="_blank" href="http://localhost:3000/" >
 //   <div class="gallery"><img></div>
@@ -64,16 +57,15 @@ div {
   text-align: center;
 .font_small {
    font-size:small;
-   color: white;
+   color: black;
  }
  .font_medium {
    font-size:medium;
-   color: #0D47A1;
+   color: black;
  }
  .font_large{
    font-size:large;
  }
-
  .font_xlarge{
    font-size:x-large;
  }
@@ -84,7 +76,31 @@ div {
 
 }
 div.text {
-  font-size: x-large;
+  font-size: large;
   background-color: #f2f2f2;
   text-align: center;
 }
+
+ div.wrapper {
+   position:  absolute;
+   top : 200px;
+   left: 550px;
+   width: 300px;
+   height:300px;
+   border:1px solid black;
+   padding-left: 6%;
+   background-color: #f2f2f2;
+   // padding-bottom: 10%;
+
+     // width: 300px;
+     // height:300px;
+     // border:1px solid black;
+     // padding-left: 10%;
+     // padding-bottom: 12%;
+ }
+
+
+ input[type="text"] {
+      display: block;
+      margin : 0 auto;
+ }
