--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <html>
 <style>
 input[type=text], select {
-    width: 100%;
+    width: 80%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -12,7 +12,7 @@ input[type=text], select {
 }
 
 input[type=submit] {
-    width: 100%;
+    width: 80%;
     background-color: #ff5252;
     color: white;
     padding: 14px 20px;
@@ -30,15 +30,17 @@ div {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    padding-bottom: 4%;
+    padding-right: 10%; 
 }
 
 </style>
 <body>
 
-<div>
+  <div class="wrapper">
+    <h2>Welcome to Spotifly</h2>
   <%= form_for :user, url:  check_creds_path , method: :post do |t|%>
 
-  <div class="font_xxlarge">Welcome to Spotifly</div><br>
   <%=t.label :username%>
   <%= t.text_field :username, placeholder:"Your username..."%>
   <br>
@@ -47,9 +49,9 @@ div {
   <br><br>
   <%= t.submit "Login" %>
   <div class="font_medium">Don't have an account? <%= link_to "Click to Register", new_user_path %></div>
+  <%end%>
+</div>
 <a target="_blank" href="http://localhost:3000/">
   <div class="gallery"><img></div>
-    <%end%>
-  </div>
 </body>
 </html>
