--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -35,8 +35,8 @@ div.gallery {
 
     display: block;
    margin: auto 20px;
-   width: 150px;
-   height: 38px;
+   width: 4%;
+   height: 8%;
    border-radius: 2%;
 }
 
@@ -80,12 +80,12 @@ div {
 }
 div.wrapper {
   position:  absolute;
-  top : 200px;
-  left: 550px;
-  width: 300px;
-  height:300px;
+  top : 20%;
+  // left: 50%;
+  width: 20%;
+  height:35%;
   border:1px solid black;
-  padding-left: 6%;
+  // padding-left: 6%;
   background-color: #f2f2f2;
   padding-right: 2%;
   // padding-bottom: 10%;
