--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -79,13 +79,14 @@ div {
  }
 }
 div.wrapper {
+  margin: auto;
   position:  absolute;
   top : 20%;
-  // left: 50%;
-  width: 20%;
-  height:35%;
+  text-align: left;
+  width: 25%;
+  height:50%;
   border:1px solid black;
-  // padding-left: 6%;
+  padding-right: 5%;
   background-color: #f2f2f2;
   padding-right: 2%;
   // padding-bottom: 10%;
