--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -60,12 +60,10 @@ div.gallery {
   background-repeat: no-repeat;
 
     display: block;
-
-   // margin: auto 20px;
-   float: right;
-   width: 150px;
-   height: 38px;
-   border-radius: 3%;
+   margin: auto 2%;
+   width: 4%;
+   height: 8%;
+   border-radius: 2%;
 
 }
 
