--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -34,10 +34,10 @@ div.gallery {
   background-repeat: no-repeat;
 
     display: block;
-   margin: auto 20px;
+   margin: auto 2%;
    width: 4%;
    height: 8%;
-   border-radius: 2%;
+   border-radius: 3%;
 }
 
 div.gallery:hover {
