--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,8 @@ input[type=submit] {
     width: 80%;
     background-color: #ff5252;
     color: white;
-    padding: 14px 20px;
+    padding: 5%;
+     /* 14px 20px; */
     margin: 8px 0;
     border: none;
     border-radius: 4px;
@@ -27,11 +28,11 @@ input[type=submit]:hover {
 }
 
 div {
-    border-radius: 5px;
+    border-radius: .5%;
     background-color: #f2f2f2;
-    padding: 20px;
+    padding: 2%;
     padding-bottom: 4%;
-    padding-right: 10%; 
+    padding-right: 10%;
 }
 
 </style>
@@ -48,7 +49,7 @@ div {
   <%= t.text_field :password, placeholder:"Your password..."%>
   <br><br>
   <%= t.submit "Login" %>
-  <div class="font_medium">Don't have an account? <%= link_to "Click to Register", new_user_path %></div>
+  <div class="font_medium">Don't have an account?<br><%= link_to "Click to Register", new_user_path %></div>
   <%end%>
 </div>
 <a target="_blank" href="http://localhost:3000/">
