--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
             .topnav {
               overflow: hidden;
               background-color: #e9e9e9;
+              width: 100;
+              height: 10%;
             }
 
             .topnav a {
@@ -88,6 +90,7 @@
   </head>
 
   <body>
+    
     <%= yield %>
   </body>
 </html>
