--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,6 +1,6 @@
 <div class="search-container">
     <form action="/songs" method="POST">
-      <input type="text" placeholder="Search.." name="search">
+      <input for="q" type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
 </div>
