--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,10 +25,10 @@
       width: 80%;
       background-color: #ff5252;
       color: white;
-      padding: 14px 20px;
+      padding: 5%;
       margin: 8px 0;
       border: none;
-      border-radius: 4px;
+      border-radius: 3%;
       cursor: pointer;
   }
 
@@ -37,9 +37,9 @@
   }
 
   div {
-    border-radius: 5px;
+    border-radius: 3%;
     background-color: #f2f2f2;
-    padding: 10px;
+    padding: 3%;
     text-align: left;
   }
   </style>
