--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,19 +13,19 @@ body {
   line-height: 18px;
 
 }
-.label {
-    color: e7e7e7;
-    padding: 10px;
-    font-family: Arial;
-    text-align: center;
-    font-size: 20px;
-}
-.success {background-color: #4CAF50;} /* Green */
-.info {background-color: #2196F3;} /* Blue */
-.warning {background-color: #ff9800;} /* Orange */
-.danger {background-color: #f44336;} /* Red */
-.other {background-color: #e7e7e7; color: black;} /* Gray */
-.white {background-color: white;}
+// .label {
+//     color: e7e7e7;
+//     padding: 10px;
+//     font-family: Arial;
+//     text-align: center;
+//     font-size: 20px;
+// }
+// .success {background-color: #4CAF50;} /* Green */
+// .info {background-color: #2196F3;} /* Blue */
+// .warning {background-color: #ff9800;} /* Orange */
+// .danger {background-color: #f44336;} /* Red */
+// .other {background-color: #e7e7e7; color: black;} /* Gray */
+// .white {background-color: white;}
 
 
 div.gallery {
@@ -74,28 +74,27 @@ div {
 
  div.text {
    font-size: large;
-   background-color: #f2f2f2;
+   // background-color: #f2f2f2;
    text-align: center;
  }
 }
 div.wrapper {
-  margin: auto;
-  position:  absolute;
-  top : 20%;
-  text-align: left;
-  width: 25%;
-  height:50%;
+
   border:1px solid black;
   padding-right: 5%;
   background-color: #f2f2f2;
   padding-right: 2%;
-  // padding-bottom: 10%;
+  padding-bottom: 25%;
 
-    // width: 300px;
-    // height:300px;
-    // border:1px solid black;
-    // padding-left: 10%;
-    // padding-bottom: 12%;
+  position:fixed;
+   top: 20%;
+   left: 50%;
+   width:30em;
+   height:18em;
+   margin-top: -9em; /*set to a negative number 1/2 of your height*/
+   margin-left: -15em; /*set to a negative number 1/2 of your width*/
+   border: 1px solid #ccc;
+   background-color: #f3f3f3;
 }
 
 
