--- a/app/views/playlists/join.html.erb
+++ b/app/views/playlists/join.html.erb
@@ -1,10 +1,69 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+input[type=text] {
+    width: 60%;
+    box-sizing: border-box;
+    border: 2% solid #ccc;
+    border-radius: 7%;
+    font-size: 70%;
+    background-color: white;
+    background-image: url('searchicon.png');
+    background-position: 5% 5%;
+    background-repeat: no-repeat;
+    padding: 6%;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    display: inline-block;
+}
+
+input[type=text]:focus {
+  margin: auto;
+    width: 100%;
+}
+
+.button {
+    background-color: #ff5252;
+    border-radius: 5%;
+    color: white;
+    padding: 4% 20%;
+    text-align: center;
+
+    display: inline-block;
+    font-size: medium;
+    cursor: pointer;
+}
+.button:hover{
+  background-color: #d50000;
+}
+
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+div {
+  border-radius: 3%;
+  background-color: #f2f2f2;
+  padding: 5%;
+  text-align: left;
+}
+</style>
+
+<body>
+  <div class="wrapper">
+<br>
+<h2>Join a Playlist</h2>
+
+
 <% if flash[:notice] %>
     <div class="notice"><%= flash[:notice] %></div>
   <% end %>
 
 
 <%= form_for @playlist, url: join_playlist_path do |t|%>
-  
+
   <%=t.label :name%>
   <%= t.text_field :name%>
   <br>
@@ -15,3 +74,6 @@
 
 
   <%end%>
+</body>
+</div>
+</html>
