--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -21,8 +21,19 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
+  }
 
 
+  div.wrapper {
+    margin: auto;
+    position:  absolute;
+    /* top : 20%; */
+    text-align: left;
+    /* width: 25%;
+    height:50%; */
+    border:1px solid black;
+    border-radius: 4%;
+    background-color: #f2f2f2;
   }
 
   input[type=submit]:hover {
@@ -30,9 +41,9 @@
   }
 
   div {
-      border-radius: 5px;
+      border-radius: 3%;
       background-color: #f2f2f2;
-      padding: 10px;
+      padding: .5%;
       text-align: left;
   }
   </style>
