--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -2,7 +2,7 @@
 
 body {
 
-  background-image: image-url('geekpic.png');
+  background-image: image-url('pastel.png');
   background-repeat: no-repeat;
   background-size: 100%;
   background-color: #3498db;
@@ -77,18 +77,7 @@ div {
     margin-bottom: 10px;
   }
 
-  // img {
-  //   background-image: image-url("logo.png");
-  //   background-repeat: no-repeat;
-  //   background-size: 100%;
-  //   position: absolute;
-  //   width: 20%;
-  //   height: 20%;
-  //   left: 0px;
-  //   top: 0px;
-  //   z-index: -1;
-  // }
-  .login_div {
+.login_div {
    position: absolute;
 
    width: 20%;
@@ -103,7 +92,7 @@ div {
 
 }
 
-  .login_form {
+.login_form {
    // display: flex;
    width: 22%;
    height: 30%;
