--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  background-image: image-url('pastel.jpg');
+  background-image: image-url('picture1.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
   background-color: white;
@@ -13,19 +13,6 @@ body {
   line-height: 18px;
 
 }
-// .label {
-//     color: e7e7e7;
-//     padding: 10px;
-//     font-family: Arial;
-//     text-align: center;
-//     font-size: 20px;
-// }
-// .success {background-color: #4CAF50;} /* Green */
-// .info {background-color: #2196F3;} /* Blue */
-// .warning {background-color: #ff9800;} /* Orange */
-// .danger {background-color: #f44336;} /* Red */
-// .other {background-color: #e7e7e7; color: black;} /* Gray */
-// .white {background-color: white;}
 
 
 div.gallery {
