--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -23,33 +23,47 @@
       cursor: pointer;
   }
 
-
-  div.wrapper {
-    margin: auto;
-    position:  absolute;
-    /* top : 20%; */
-    text-align: left;
-    /* width: 25%;
-    height:50%; */
-    border:1px solid black;
-    border-radius: 4%;
-    background-color: #f2f2f2;
-  }
-
-  input[type=submit]:hover {
+input[type=submit]:hover {
       background-color: #d50000;
   }
 
-  div {
-      border-radius: 3%;
-      background-color: #f2f2f2;
-      padding: .5%;
-      text-align: left;
+div.wrapper {
+    border:1px solid black;
+    padding-right: 5%;
+    background-color: #f2f2f2;
+    padding-right: 2%;
+    padding-bottom: 25%;
+
+    position:fixed;
+     top: 20%;
+     left: 50%;
+     width:30em;
+     height:18em;
+     margin-top: -9em; /*set to a negative number 1/2 of your height*/
+     margin-left: -15em; /*set to a negative number 1/2 of your width*/
+     border: 1px solid #ccc;
+     background-color: #f3f3f3;
   }
+
+input[type=submit]:hover {
+      background-color: #d50000;
+}
+
+div {
+    border-radius: 3%;
+    background-color: #f2f2f2;
+    padding: .5%;
+    text-align: left;
+}
+div {
+  border-radius: 3%;
+  background-color: #f2f2f2;
+  padding: 3%;
+  text-align: left;
+}
+
   </style>
   <body>
-
-
     <div class="wrapper">
       <h2>Create a Playlist</h2>
     <%= form_for @playlist do |t|%>
@@ -61,10 +75,10 @@
       <%= t.text_field :passphrase, placeholder: "Passphrase here..."%>
       <br><br>
       <%= t.submit "Create Playlist " %>
-      <%end%><br><br>
+      <%end%>
+      <br><br>
   </div>
-  <a target="_blank" href="http://localhost:3000/">
-    <div class="gallery"> </div>
+
 
   </body>
   </html>
