--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -42,6 +42,7 @@
     padding: 3%;
     text-align: left;
   }
+  
   </style>
   <body>
 
@@ -58,7 +59,6 @@
         <%= t.submit "Register" %>
           <%end%></div><br><br>
           </div>
-          <a target="_blank" href="http://localhost:3000/" >
-            <div class="gallery"></div>
         </body>
+        <div class="gallery", link_to"http://localhost:3000/"></div>
         </html>
