fixed create page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -42,10 +42,25 @@
     padding: 3%;
     text-align: left;
   }
-  
+
+  .button {
+    background-color: #ff5252;
+    border-radius: 5%;
+    color: white;
+    padding: .5% 2%;
+    text-align: center;
+
+    display: inline-block;
+    font-size: medium;
+    cursor: pointer;
+  }
+
+  .button:hover{
+    background-color: #d50000;
+  }
+
   </style>
   <body>
-
     <div class="wrapper">
       <h2>Create an Account<h2>
       <%= form_for :user do |t|%>
@@ -60,5 +75,5 @@
           <%end%></div><br><br>
           </div>
         </body>
-        <div class="gallery", link_to"http://localhost:3000/"></div>
+
         </html>
