--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -42,14 +42,17 @@ div {
 
       <%if @user.playlist.songs.any? %>
 
-      <%=@user.playlist.songs.each do |song|%>
+      <%@user.playlist.songs.each do |song|%>
         <%=song.title%>
+        by <%=song.artist_name%>
 
         <%end%>
+        <br>
+         <%= link_to "Add a song", new_song_path%>
         <%end%>
-        <%= link_to "Add a song", new_song_path%>
+
       </div>
-
+     
       <div class="gallery" link_to "http://localhost:3000/"></div>
 </body>
 </html>
